--- a/src/Components/NavegationBar.css
+++ b/src/Components/NavegationBar.css
@@ -1,6 +1,17 @@
+@font-face {
+    font-family: pixelFont;
+    src: url(./Font/04B_30__.TTF);
+}
+nav{
+    margin-top: 0em ;
+    background-image: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0));
+    padding: 10px;
+    
+}
+
 ul{
     list-style-type: none;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin: 5px;
     display: flex;
     align-items: center;
@@ -9,4 +20,13 @@ ul{
 
 .link{
     text-decoration: none;
+    font-family: pixelFont;
+    font-size: 3em;
+    color: rgb(74, 74, 206);
+    text-shadow: 2px 4px rgb(21, 14, 132);
+    transition: color 0.5s ease;
+}
+
+.link:hover{
+    color: rgb(12, 171, 73);;
 }
