--- a/src/Components/NavegationBar.css
+++ b/src/Components/NavegationBar.css
@@ -6,13 +6,14 @@ nav{
     margin-top: 0em ;
     background-image: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0));
     padding: 10px;
-    
+    padding-bottom: 90px;
 }
 
 ul{
     list-style-type: none;
     /* border: 2px solid red; */
     margin: 5px;
+    margin-top: 3%;
     display: flex;
     align-items: center;
     justify-content: space-around;
